apps/base/jpat-web/jpat-web.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jpat-web
  namespace: default

spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: jpat-web
